Shared modules: common, jps-plugin, tools
QA split of dev/project-structure-V2-profilers (file-set reconstruction).

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>