@@ -21,7 +21,6 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.jps.incremental.BuilderService;
 import org.jetbrains.jps.incremental.ModuleLevelBuilder;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -31,6 +30,6 @@ public class HaxeBuilderService extends BuilderService {
   @NotNull
   @Override
   public List<? extends ModuleLevelBuilder> createModuleLevelBuilders() {
-    return Arrays.asList(new HaxeModuleLevelBuilder(true), new HaxeModuleLevelBuilder(false));
+    return List.of(new HaxeModuleLevelBuilder());
   }
 }
